2007-09-28  Kai Habel  <kai.habel@gmx.de>

	* graphics.h.in (color_property::colormap_property (const Matrix&)):
	Use floating point math in calculation of colormap.

2007-09-26  David Bateman  <dbateman@free.fr>

	* graphics.cc (color_values::str2rgb): accept upper, lower and
	mixed-case versions of the string representing the color. Allow
	black defined as "k" and white as "w".
	(color_property::color_property (const octave_value& val, 
	const radio_values &v)): Modify the constructor to also take a
	radio_values argument. Use it.
	(patch::properties::set): Change set_facecolor calls to initialize
	the color_property argument with the available radio_values.
	* graphics.h.in (color_property::color_property 
	(const octave_value& val, const radio_values &v)): Also pass a 
	radio_values argument.

	* ov-range.h (sparse_matrix_value, sparse_complex_matrix_value):
	New methods.

	* mk-pkg-add: Simplfy the autoload commands.
	* parse.y (Fautoload): Allow bare filename if file is in the same
	directory as the script from where the autoload command is run.

2007-09-25  Matthias Drochner  <m.drochner@fz-juelich.de>

	* syscalls.cc (Fpopen2): Doc fix.

2007-09-18  John W. Eaton  <jwe@octave.org>

	* input.cc (input_event_hook, Finput_event_hook): Call
	command_editor::add_event_hook and
	command_editor::remove_event_hook intstead of
	command_editor::set_event_hook and
	command_editor::restore_event_hook.

2007-09-17  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.14+.

2007-09-17  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.14.
	(OCTAVE_API_VERSION): Now api-v26.
	(OCTAVE_RELEASE_DATE): Now 2007-09-17.

	* Makefile.in (DISTFILES): Add genprops.awk to the list.

	* ov-typeinfo.h (cat_op_fcn): Third arg in function pointer
	typedef is now Array<octave_idx_type> instead of Array<int>.

	* file-io.cc (do_stream_open): Use binary mode by default.

2007-09-14  Shai Ayal  <shaiay@users.sourceforge.net>
